--- a/Box2DHelper/CMakeLists.txt
+++ b/Box2DHelper/CMakeLists.txt
@@ -28,6 +28,5 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(searchAndDiscover src/searchAndDiscover)
-rosbuild_add_library(NodeCPP src/Node.cpp)
-target_link_libraries(searchAndDiscover Box2DHelper)
+rosbuild_add_library(Box2DHelper src/Box2DHelper.cpp)
+rosbuild_add_library(Box2DHelper include/Box2DHelper.hpp)
